    buffer.
- Update: *File Management*:
  - New: key binding ``<f11> f M-l`` to find-file-literally``.
  - New: command *pel-show-buffer-file-encoding*, bound to ``<f11> f ?`` that
    shows the encoding of the file in current buffer by opening the *Help*
    buffer showing the value of Emacs variable buffer-file-coding-system.
- Update: *Grep*:
  - New: Added key bindings for [[https://github.com/ggreer/the_silver_searcher][ag]] (the silver searcher) based grep-style
    search.
- Update: *Help*:
  - New: Added a command (<f11> ? e c) to open a local copy of
    one of the [[https://www.gnu.org/software/emacs/refcards/index.html][Emacs PDF reference cards]]. The new *pel-emacs-refcard-dirpath*
    user option identifies a directory where Emacs PDF refcards are stored. If
    you set that user option PEL uses it to locate the Emacs PDF refcards,
    otherwise it attempts to locate it.  Under macOS automatic location often
    works nicely because the Emacs reference cards are stored in PDF format.
    On Linux platforms the refcards are stored in .tex format and PEL does not
    attempt to build or render the .tex files, so its often best to download
    the PDF files, store them in a directory and identify that location in the
    user option.
  - New: key binding to a command to display Emacs executable path: <f11> ? e x.
  - New: key binding to display Emacs up-time (<f11> ? e u).
- Update: *Indentation*:
  - Improvement: to the commands bound to ``<f6> <tab>`` (now
    ``pel-indent-lines``) and `<S-tab>`` (now ``pel-unindent-lines``):
    - The commands now handle a marked region like a region marking all
      touched lines and now longer suffers from a degradation of the marked
      area on subsequent commands.
    - The commands now properly handle the presence of hard tabs in the
      indentation whitespace.  They also automatically tabify or untabify the
      indentation whitespace, conforming to the mode identified by the