@@ -35,26 +35,46 @@
 (defconst ok-url-strings '( "https://www.gnu.org/"
                             "https://github.com/pierre-rouleau/pel"))
 
+(ert-deftest ert-test-pel-file-extract-url ()
+  (dolist (url ok-url-strings)
+    (with-temp-buffer
+      (insert url)
+      (goto-char (point-min))
+      (should (string= (pel-filename-at-point) url)))))
+
+;; ----
 
 (defconst fn-strings
 ;;    tested pattern                   | expected results
 ;;    fnlc                             |---- ok-fn-spec --------------------------------|
 ;;    fnlc                             ok-kind      ok-fn                           ok-line ok-column
   '(( "a-simple-file-name.txt"        (fname        "a-simple-file-name.txt"        nil nil))
+    ( "a-simple-file-name.txt:"       (fname        "a-simple-file-name.txt"        nil nil))
     ( "/abc/def/ghi/jkl/abc.txt"      (fname        "/abc/def/ghi/jkl/abc.txt"      nil nil))
+    ( "/abc/def/ghi/jkl/abc.txt:"     (fname        "/abc/def/ghi/jkl/abc.txt"      nil nil))
     ( "/abc/def/ghi/jkl/abc.txt   "   (fname        "/abc/def/ghi/jkl/abc.txt"      nil nil))
+    ( "/abc/def/ghi/jkl/abc.txt:  "   (fname        "/abc/def/ghi/jkl/abc.txt"      nil nil))
     ( "\\abc\\def\\ghi\\jkl\\abc.txt" (fname        "\\abc\\def\\ghi\\jkl\\abc.txt" nil nil))
+    ( "\\abc\\def\\ghi\\jkl\\abc.txt:" (fname       "\\abc\\def\\ghi\\jkl\\abc.txt" nil nil))
     ( "Où-êtes-vous_tous?"            (fname        "Où-êtes-vous_tous?"            nil nil))
+    ( "Où-êtes-vous_tous?:"           (fname        "Où-êtes-vous_tous?"            nil nil))
     ( "Ici!"                          (fname        "Ici!"                          nil nil))
+    ( "Ici!:"                         (fname        "Ici!"                          nil nil))
     ( "Ici!        "                  (fname        "Ici!"                          nil nil))
     ( "C:\\Windows\\files\\c.cpp"     (fname-w-ddrv "C:\\Windows\\files\\c.cpp"     nil nil))
+    ( "C:\\Windows\\files\\c.cpp:"    (fname-w-ddrv "C:\\Windows\\files\\c.cpp"     nil nil))
     ( "C:\\Windows\\files\\c.cpp  "   (fname-w-ddrv "C:\\Windows\\files\\c.cpp"     nil nil))
     ( "C:/Windows/files/c.cpp"        (fname-w-ddrv "C:/Windows/files/c.cpp"        nil nil))
+    ( "C:/Windows/files/c.cpp:"       (fname-w-ddrv "C:/Windows/files/c.cpp"        nil nil))
     ( "C:/Windows/files/c.cpp  "      (fname-w-ddrv "C:/Windows/files/c.cpp"        nil nil))
+    ( "C:/Windows/files/c.cpp:  "     (fname-w-ddrv "C:/Windows/files/c.cpp"        nil nil))
     ( "/usr/me/src/pel/pel.el"        (fname        "/usr/me/src/pel/pel.el"        nil nil))
     ( "\\usr\\me\\src\\pel\\pel.el"   (fname        "\\usr\\me\\src\\pel\\pel.el"   nil nil))
+    ( "\\usr\\me\\src\\pel\\pel.el:"  (fname        "\\usr\\me\\src\\pel\\pel.el"   nil nil))
     ( "\\usr/me/src/pel/pel.el"       (fname        "\\usr/me/src/pel/pel.el"       nil nil))
+    ( "\\usr/me/src/pel/pel.el:"      (fname        "\\usr/me/src/pel/pel.el"       nil nil))
     ( "/abc/def/"                     (fname        "/abc/def/"                     nil nil))
+    ( "/abc/def/:"                    (fname        "/abc/def/"                     nil nil))
     ( "./pel.el"                      (fname        "./pel.el"                      nil nil))
     ( "./pelo.el:1:2"                 (fname        "./pelo.el"                     1 2))
     ( "./pel.el:1001:4"               (fname        "./pel.el"                      1001 4))
@@ -65,17 +85,9 @@
     ( "../dev/pel.el"                 (fname        "../dev/pel.el"                 nil nil))
     ( "~/src/pel/pel.cpp"             (fname        "~/src/pel/pel.cpp"             nil nil))
     ( "~/../other/src/python/d.py"    (fname        "~/../other/src/python/d.py"    nil nil))
-    ))
-
-
-(ert-deftest ert-test-pel-file-extract-url ()
-  (dolist (url ok-url-strings)
-    (with-temp-buffer
-      (insert url)
-      (goto-char (point-min))
-      (should (string= (pel-filename-at-point) url)))))
-
-
+    ( "../dev/pel.el:"                (fname        "../dev/pel.el"                 nil nil))
+    ( "~/src/pel/pel.cpp:"            (fname        "~/src/pel/pel.cpp"             nil nil))
+    ( "~/../other/src/python/d.py:"   (fname        "~/../other/src/python/d.py"    nil nil))))
 
 (ert-deftest ert-test-pel-file-extract-filename ()
   (dolist (entry fn-strings)
@@ -87,9 +99,10 @@
            ;;(ok-column  (cadddr ok-fn-spec))
            )
       (with-temp-buffer
-        ;; test extraction of a file name without and with following
-        ;; white-spaces and some other ASCII characters that may follow the
-        ;; file name.
+        ;; test extraction of a file name under different scenarios:
+        ;; - 1:  with nothing after the pattern
+        ;; - 2:  with white-spaces and some other ASCII characters
+        ;;       that may follow the file name.
         (dolist (extra-chars '(""
                                " "
                                "  "
