@@ -168,6 +168,9 @@ PEL -- Pragmatic Environment Library --  NEWS         -*- org -*-
   - New: command *pel-show-buffer-file-encoding*, bound to ``<f11> f ?`` that
     shows the encoding of the file in current buffer by opening the *Help*
     buffer showing the value of Emacs variable buffer-file-coding-system.
+  - Improved: *pel-open-at-point* is now able to open a file when its name is
+    immediately followed by a colon character.  Useful when trying to open the
+    file whose name is shown in the result of a grep command.
 - Update: *Grep*:
   - New: Added key bindings for [[https://github.com/ggreer/the_silver_searcher][ag]] (the silver searcher) based grep-style
     search.
